812553 : Divya -Fixed Profile Photo overlapping with Update Headline button

--- a/assets/css/create_profile.css
+++ b/assets/css/create_profile.css
@@ -1,3 +1,7 @@
+.mobile-margin{
+    margin-top: 30px;
+}
+
 .line {
     display: block;
     border-top: 2px solid black;
